--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="text_14">14sp</dimen>
     <dimen name="text_12">12sp</dimen>
 
+    <dimen name="avatar">40dp</dimen>
     <dimen name="corner">@dimen/size_8</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
