Repository and classes related to user detail feature added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,12 @@
     </fragment>
     <fragment
         android:id="@+id/viewDetailFragment"
-        android:name="com.rajith.payconiq.home.detail.view.fragment.ViewDetailFragment"
-        android:label="ViewDetailFragment" />
+        android:name="com.rajith.payconiq.home.detail.view.fragment.UserDetailFragment"
+        android:label="ViewDetailFragment">
+    <argument
+        android:name="login"
+        app:argType="string"
+        android:defaultValue="" />
+
+    </fragment>
 </navigation>
