--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/searchUserFragment">
 
@@ -9,17 +10,17 @@
         android:name="com.rajith.payconiq.home.search.view.fragment.SearchUserFragment"
         android:label="SearchUserFragment" >
         <action
-            android:id="@+id/action_searchUserFragment_to_viewDetailFragment"
-            app:destination="@id/viewDetailFragment" />
+            android:id="@+id/navToUserDetailFragment"
+            app:destination="@id/userDetailFragment" />
     </fragment>
-    <fragment
-        android:id="@+id/viewDetailFragment"
-        android:name="com.rajith.payconiq.home.detail.view.fragment.UserDetailFragment"
-        android:label="ViewDetailFragment">
-    <argument
-        android:name="login"
-        app:argType="string"
-        android:defaultValue="" />
 
+    <fragment
+        android:id="@+id/userDetailFragment"
+        android:name="com.rajith.payconiq.home.detail.view.fragment.UserDetailFragment"
+        android:label="UserDetailFragment"
+        tools:layout="@layout/fragment_user_detail">
+        <argument
+            android:name="login"
+            app:argType="string" />
     </fragment>
 </navigation>
